# agrobot-wheather-alerts

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-ai-review.txt
.claude/skills/add-alert/: SKILL.md
.claude/skills/evaluate-alerts/: SKILL.md
.github/workflows/: ai-review.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_checks_indexes_cascades.py  003_add_check_constraints_to_field_lat_lon.py  004_add_notification_constraint_and_weather_cascade.py
app/: config.py  database.py  dependencies.py  logging_config.py  main.py
app/models/: __init__.py  alert_config.py  field.py  notification.py  user.py  weather_data.py
app/routers/: alert_configs.py  jobs.py  notifications.py
app/schemas/: alert_config.py  notification.py
app/services/: alert_evaluator.py  weather_seeder.py
docs/design-docs/: CHALLENGE.md  REVIEW_NOTES.md  WALKTHROUGH.md
docs/exec-plans/: IMPLEMENTATION_PLAN.md  PLAN.md
scripts/: ai_pr_description.py  ai_reviewer.py
tests/: conftest.py  test_alert_evaluator.py  test_placeholder.py
tests/test_routers/: test_alert_configs.py  test_jobs.py  test_notifications.py
